RESOLVED FIXED 246553
AX: The isolated tree is not updated when document titles change
https://bugs.webkit.org/show_bug.cgi?id=246553
Summary AX: The isolated tree is not updated when document titles change
Tyler Wilcock
Reported 2022-10-14 17:52:47 PDT
AX: The isolated tree is not updated when document titles change
Attachments
Patch (8.09 KB, patch)
2022-10-14 17:54 PDT, Tyler Wilcock
no flags
Patch (8.09 KB, patch)
2022-10-17 11:39 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-10-14 17:53:04 PDT
Tyler Wilcock
Comment 2 2022-10-14 17:54:45 PDT
Tyler Wilcock
Comment 3 2022-10-17 11:39:13 PDT
EWS
Comment 4 2022-10-17 20:44:55 PDT
Committed 255663@main (757b65c09d72): <https://commits.webkit.org/255663@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463038 [details].
Note You need to log in before you can comment on or make changes to this bug.