AX: The isolated tree is not updated when document titles change https://bugs.webkit.org/show_bug.cgi?id=246553 rdar://problem/101194307

Reviewed by Chris Fleizach.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* LayoutTests/accessibility/mac/document-title-used-for-description-expected.txt:
* LayoutTests/accessibility/mac/document-title-used-for-description.html:
Make this test async and add a few more testcases.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onTitleChange): Added.
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::onTitleChange): Added.
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateTitle):
Notify AX when the document's title is updated.

Canonical link: https://commits.webkit.org/255663@main