Source/WebCore/accessibility/AXObjectCache.cpp
@@ -1447,6 +1447,11 @@ void AXObjectCache::onSelectedChanged(Node* node)
     handleMenuItemSelected(node);
 }
 
+void AXObjectCache::onTitleChange(Document& document)
+{
+    postNotification(get(&document), nullptr, AXTextChanged);
+}
+
 #ifndef NDEBUG
 void AXObjectCache::showIntent(const AXTextStateChangeIntent &intent)
 {
